--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -39,23 +39,21 @@
                 <MenuItem Header="Student">
                     <MenuItem Header="Add" Click="MenuItem_Click_3" />
                     <MenuItem Header="View" Click="MenuItem_Click_6"></MenuItem>
-                   
-                    </MenuItem>
-                <MenuItem Header="Marksheet">
-
+                    <Separator />
+                    <MenuItem Header="Import" Click="MenuItem_Click_2"/>
                 </MenuItem>
+                <MenuItem Header="Marksheet">
+                    <MenuItem Header="Board / Council" Command="{Binding ShowBoardExamViewCommand, Source={StaticResource vm}}"></MenuItem>
+                    </MenuItem>
                 <MenuItem Header="Certificate">
                     <MenuItem Header="Character" Click="MenuItem_Click_4" />
                     <MenuItem Header="Transfer"/>
                     <MenuItem Header="School Leaving"/>
                 </MenuItem>
                 <MenuItem Header="Report">
-                    
+                    <MenuItem Header="Export to Excel" Command="{Binding ShowExcelExportCommand, Source={StaticResource vm}}"/>
                 </MenuItem>
-                <MenuItem Header="Excel">
-                    <MenuItem Header="Import" Click="MenuItem_Click_2"/>
-                    <MenuItem Header="Export" Command="{Binding ShowExcelExportCommand, Source={StaticResource vm}}"/>
-                </MenuItem>
+              
                 <MenuItem Header="Backup">
                     
                 </MenuItem>
