--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -36,6 +36,11 @@
                     <Separator />
                     <MenuItem Header="Session" Command="{Binding ShowSessionWindowCommand, Source={StaticResource vm}}"></MenuItem>
                 </MenuItem>
+                <MenuItem Header="Staff">
+                    <MenuItem Header="Detail" Command="{Binding ShowStaffDetailViewCommand, Source={StaticResource vm}}"/>
+                    <Separator />
+                    <MenuItem Header="Import from excel"/>
+                </MenuItem>
                 <MenuItem Header="Student">
                     <MenuItem Header="Add" Click="MenuItem_Click_3" />
                     <MenuItem Header="View" Click="MenuItem_Click_6"></MenuItem>
