--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -33,6 +33,7 @@
                 <MenuItem Header="Configuration">
                     <MenuItem Header="Group &amp; Subject" Click="MenuItem_Click_1"/>
                     <MenuItem Header="Subject Combo" Click="MenuItem_Click_5" />
+                    <MenuItem Header="Exam" Command="{Binding ShowExamViewCommand, Source={StaticResource vm}}"/>
                     <Separator />
                     <MenuItem Header="Session" Command="{Binding ShowSessionWindowCommand, Source={StaticResource vm}}"></MenuItem>
                 </MenuItem>
@@ -43,7 +44,7 @@
                 </MenuItem>
                 <MenuItem Header="Student">
                     <MenuItem Header="Add" Click="MenuItem_Click_3" />
-                    <MenuItem Header="View" Click="MenuItem_Click_6"></MenuItem>
+                    <MenuItem Header="View" Command="{Binding ShowStudentDetailViewCommand, Source={StaticResource vm}}"></MenuItem>
                     <MenuItem Header="Delete" Command="{Binding ShowDeleteViewCommand, Source={StaticResource vm}}"></MenuItem>
                     <Separator />
                     <MenuItem Header="Import" Click="MenuItem_Click_2"/>
