--- a/NaimouzaHighSchool/Views/BoardExamView.xaml
+++ b/NaimouzaHighSchool/Views/BoardExamView.xaml
@@ -33,14 +33,15 @@
                     <ColumnDefinition Width="Auto"/>                   
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Horizontal">
-                    <Label>Class</Label>
-                    <ComboBox Width="60"></ComboBox>
+                    <Label>Exam</Label>
+                    <ComboBox Width="120" ItemsSource="{Binding ExamList, Source={StaticResource bvm}}" SelectedIndex="{Binding ExamListIndex, Source={StaticResource bvm}}"></ComboBox>
                     <Label>Session </Label>
                     <TextBox Width="50"></TextBox>
                     <Label>-</Label>
                     <TextBox Width="50"></TextBox>
-                    <Label>Total Marks</Label>
-                    <TextBox Width="50" Text="{Binding TxbTotalMarks, Source={StaticResource bvm}}"></TextBox>
+                    <Label>Full Marks</Label>
+                    <TextBox Width="50" Text="{Binding TxbFullMarks, Source={StaticResource bvm}, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <Button Width="80" Command="{Binding GetCommand, Source={StaticResource bvm}}">Get</Button>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                     <Label>Select extra visible rows </Label>
@@ -60,7 +61,8 @@
                     <DataGridTextColumn Header="Exam Roll" Binding="{Binding Path=BoardRoll}" Visibility="{Binding BoardRollVisibility, Source={StaticResource bvm}}"/>
                     <DataGridTextColumn Header="Exam No" Binding="{Binding Path=BoardNo}" Visibility="{Binding BoardNoVisibility, Source={StaticResource bvm}}"/>
                     <DataGridTextColumn Header="Obtained Marks" Binding="{Binding Path=ObtainedMarks, Converter={StaticResource IntConverter}, UpdateSourceTrigger=PropertyChanged}"/>
-                    <DataGridTextColumn Header="Total Marks" Binding="{Binding Path=TotalMarks, Converter={StaticResource IntConverter}, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Full Marks" IsReadOnly="True"
+                                        Binding="{Binding Path=TotalMarks, Converter={StaticResource IntConverter}, UpdateSourceTrigger=PropertyChanged}"/>
                     <DataGridTextColumn Header="Percentage" Binding="{Binding Path=Percentage}"/>
                     <DataGridTextColumn Header="Grade" Binding="{Binding Path=Grade}"/>
                     <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}"/>
